feat: google group sync (#2592)
- update docs
- UI specify service key file
